Move plugin classloading code to plugin-commons